--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "javascript-open-source-library",
-  "version": "1.1.0",
+  "version": "1.4.0-beta.0",
   "description": "demo js lib",
   "main": "src/index.js",
   "type": "module",
